# sendinblue

./: .gitignore  README.md  sendinblue.cabal  stack.yaml
example/: Minimal.hs
src/Mail/: SendInBlue.hs
src/Mail/SendInBlue/: Client.hs
src/Mail/SendInBlue/Types/: App.hs  Client.hs  Message.hs
src/Network/: SendInBlue.hs
src/Network/SendInBlue/: Client.hs
src/Network/SendInBlue/Types/: App.hs  Message.hs
