name:                sendinblue
version:             0.1.0.0
synopsis:            API for SendInBlue campaign platform.
description:         Please see README.md
homepage:            https://github.com/bnordbo/sendinblue#readme
license:             Apache
license-file:        LICENSE
author:              Bjørn Nordbø
maintainer:          bn@strangedays.no
copyright:           2016 Bjørn Nordbø
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.SendInBlue
  other-modules:       Network.SendInBlue.Client
                     , Network.SendInBlue.Types.App
                     , Network.SendInBlue.Types.Message
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , case-insensitive
                     , email-validate
                     , safe-exceptions
                     , http-conduit
                     , microlens
                     , microlens-th
                     , mtl
                     , network-uri
                     , network-uri-static
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite sendinblue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sendinblue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bnordbo/sendinblue
